--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^14.0.5",
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
@@ -31,7 +32,9 @@
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.1.9",
+    "@ionic/lab": "^3.2.13",
     "@ionic/pwa-elements": "^3.1.1",
+    "capacitor-video-player": "^3.4.2",
     "cordova-plugin-photo-library": "^2.3.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -49,6 +52,7 @@
     "@angular/language-service": "^14.0.0",
     "@capacitor/cli": "3.6.0",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@types/dom-mediacapture-record": "^1.0.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
