--- a/mobile-app/android/app/capacitor.build.gradle
+++ b/mobile-app/android/app/capacitor.build.gradle
@@ -16,7 +16,8 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-status-bar')
     implementation project(':capacitor-storage')
-
+    implementation project(':capacitor-video-player')
+    implementation "androidx.webkit:webkit:1.4.0"
 }
 
 
