--- a/mobile-app/ios/App/Podfile
+++ b/mobile-app/ios/App/Podfile
@@ -16,6 +16,7 @@ def capacitor_pods
   pod 'CapacitorKeyboard', :path => '..\..\node_modules\@capacitor\keyboard'
   pod 'CapacitorStatusBar', :path => '..\..\node_modules\@capacitor\status-bar'
   pod 'CapacitorStorage', :path => '..\..\node_modules\@capacitor\storage'
+  pod 'CapacitorVideoPlayer', :path => '..\..\node_modules\capacitor-video-player'
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
 end
 
