Fully Working Image Module and Upload Module, TODO fix VideoPlayer

--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@angular/service-worker": "^14.0.0",
+    "@awesome-cordova-plugins/ftp": "^5.44.0",
     "@awesome-cordova-plugins/photo-library": "^5.44.0",
     "@capacitor/android": "3.6.0",
     "@capacitor/app": "1.1.1",
@@ -31,12 +33,14 @@
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
+    "@ionic-native/video-player": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/lab": "^3.2.13",
     "@ionic/pwa-elements": "^3.1.1",
     "capacitor-video-player": "^3.4.2",
-    "cordova-plugin-file": "^7.0.0",
-    "cordova-plugin-photo-library": "^2.3.1",
+    "cordova-plugin-ftp": "^1.2.1",
+    "cordova-plugin-video-player": "github:moust/cordova-plugin-videoplayer",
+    "ftp": "^0.3.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -56,7 +60,7 @@
     "@types/dom-mediacapture-record": "^1.0.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.6.0",
