--- a/mobile-app/tsconfig.app.json
+++ b/mobile-app/tsconfig.app.json
@@ -3,7 +3,13 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["dom-mediacapture-record"]
+    "types": [
+      "dom-mediacapture-record",
+      "node"
+    ],
+    "typeRoots": [
+      "../node_modules/@types"
+    ]
   },
   "files": [
     "src/main.ts",
